test/fail/nat-module.mo
module { public let why = 42 }
